# uav_motion_planning

./: .clang-format  .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/planner/path_searching/: CMakeLists.txt  package.xml
src/planner/path_searching/include/path_searching/: a_star.h  kino_astar.h  kino_se3.h  rrt.h  rrt_star.h
src/planner/path_searching/src/: a_star.cpp  kino_astar.cpp  kino_se3.cpp  rrt.cpp  rrt_star.cpp
src/planner/path_searching/src/kdtree/: kdtree.cpp
src/planner/plan_env/: CMakeLists.txt
src/planner/plan_env/include/plan_env/: grid_map.h
src/planner/plan_env/src/: grid_map.cpp  sdf_map.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/config/: default.rviz
src/planner/plan_manage/launch/: multi_agents.launch  rviz.launch  simulator.xml  single_run_in_foxglove.launch  single_run_in_sim.launch
src/planner/test/: CMakeLists.txt  package.xml
src/planner/test/launch/: test_astar_searching.launch  test_kino_astar_searching.launch  test_minimum_jerk.launch  test_rrt_searching.launch  test_rrt_star_searching.launch
src/planner/test/src/: test_astar.cpp  test_astar_searching.cpp  test_kino_astar.cpp  test_kino_astar_searching.cpp  test_minimum_jerk.cpp  test_qpsolve.cpp  test_rrt_searching.cpp  test_rrt_star.cpp  test_rrt_star_searching.cpp
src/planner/traj_optimization/: CMakeLists.txt  package.xml
src/planner/traj_optimization/include/traj_optimization/: minimum_control.h
src/planner/traj_optimization/src/: minimum_control.cpp
src/planner/traj_server/: CMakeLists.txt  package.xml
src/planner/traj_server/src/: poly_traj_server.cpp
src/planner/traj_utils/: CMakeLists.txt  package.xml
src/planner/traj_utils/include/traj_utils/: poly_traj.hpp
src/simulator/fake_drone/: CMakeLists.txt  package.xml
src/simulator/fake_drone/src/: fake_drone.cpp
src/simulator/local_sensing/: CMakeLists.txt  package.xml
src/simulator/local_sensing/cfg/: local_sensing_node.cfg
src/simulator/local_sensing/src/: AlignError.h  ceres_extensions.h  csv_convert.py  cuda_exception.cuh  depth_render.cu  depth_render.cuh  device_image.cuh  euroc.cpp  helper_math.h  pcl_render_node.cpp  pointcloud_render_node.cpp
src/simulator/map_generator/: CMakeLists.txt  package.xml
src/simulator/map_generator/src/: random_forest.cpp
src/simulator/mockamap/: CMakeLists.txt  package.xml
src/simulator/mockamap/include/: maps.hpp  perlinnoise.hpp
src/simulator/mockamap/launch/: maze2d.launch  maze3d.launch  mockamap.launch  perlin3d.launch  post2d.launch
src/simulator/mockamap/src/: ces_randommap.cpp  maps.cpp  mockamap.cpp  perlinnoise.cpp
src/simulator/mpc_control/: CMakeLists.txt
src/simulator/odom_visualization/: CMakeLists.txt  package.xml
src/simulator/odom_visualization/src/: odom_visualization.cpp
src/simulator/quadrotor_mpc/: CMakeLists.txt  package.xml
src/simulator/quadrotor_mpc/config/: controller_param.yaml  default.rviz  reference_param.yaml  robot_param.yaml
src/simulator/quadrotor_mpc/include/minco_utils/: minco.hpp  root_finder.hpp  traj_visualizer.hpp  trajectory.hpp
src/simulator/quadrotor_mpc/include/quadrotor_mpc/: controller_common.hpp  get_param.hpp  mpc_controller.hpp  primal_solver.hpp
src/simulator/quadrotor_mpc/launch/: airsim.launch  test_mpc.launch
src/simulator/quadrotor_mpc/src/: controller.cpp
src/simulator/so3_control/: CMakeLists.txt  nodelet_plugin.xml  package.xml
src/simulator/so3_control/include/so3_control/: SO3Control.h
src/simulator/so3_control/src/: SO3Control.cpp  control_example.cpp  so3_control_nodelet.cpp
src/simulator/so3_disturbance_generator/: CMakeLists.txt  package.xml
src/simulator/so3_disturbance_generator/src/: so3_disturbance_generator.cpp
src/simulator/so3_quadrotor_simulator/: CMakeLists.txt  package.xml
src/simulator/so3_quadrotor_simulator/include/quadrotor_simulator/: Quadrotor.h
src/simulator/so3_quadrotor_simulator/launch/: simulator_example.launch
src/simulator/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
src/simulator/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
src/simulator/so3_quadrotor_simulator/src/test_dynamics/: test_dynamics.cpp
src/simulator/utils/cmake_utils/: CMakeLists.txt  package.xml
src/simulator/utils/multi_map_server/: CMakeLists.txt  package.xml
src/simulator/utils/multi_map_server/src/: multi_map_visualization.cc
src/simulator/utils/octomap_server/: CMakeLists.txt
src/simulator/utils/odom_visualization/: CMakeLists.txt  package.xml
src/simulator/utils/odom_visualization/src/: odom_visualization.cpp
src/simulator/utils/pose_utils/: CMakeLists.txt  package.xml
src/simulator/utils/pose_utils/include/: pose_utils.h
src/simulator/utils/pose_utils/src/: pose_utils.cpp
src/simulator/utils/quadrotor_msgs/: CMakeLists.txt  package.xml
src/simulator/utils/quadrotor_msgs/src/: decode_msgs.cpp  encode_msgs.cpp
src/simulator/utils/rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
src/simulator/utils/rviz_plugins/src/: aerialmap_display.cpp  aerialmap_display.h  goal_tool.cpp  goal_tool.h  multi_probmap_display.cpp  multi_probmap_display.h  pose_tool.cpp  pose_tool.h  probmap_display.cpp  probmap_display.h
src/simulator/utils/uav_utils/: CMakeLists.txt  package.xml
src/simulator/utils/waypoint_generator/: CMakeLists.txt  package.xml
src/test/: CMakeLists.txt
src/test/launch/: test_astar_node.launch  test_astar_searching.launch  test_grid_map.launch  test_path_searching.launch  test_rrt_searching.launch
src/test/src/: test_astar_searching.cpp  test_grid_map.cpp  test_path_searching.cpp  test_rrt.cpp
src/uav_simulator/fake_drone/src/: poscmd_2_odom.cpp
src/uav_simulator/local_sensing/: CMakeLists.txt
src/uav_simulator/local_sensing/src/: pcl_render_node.cpp  pointcloud_render_node.cpp
src/uav_simulator/map_generator/src/: random_forest_sensing.cpp
src/uav_simulator/mpc_control/: package.xml
src/uav_simulator/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
(+20 files in other folders)
